--- a/src/index.html
+++ b/src/index.html
@@ -5,5 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello NCU</title>
   </head>
-  <body></body>
+  <body>
+    <div class="LoadingClass">
+      <h1 id="LoadingPercent">Loading</h1>
+    </div>
+  </body>
 </html>
