--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     <div class="LoadingClass">
+      <button id="Play">Play</button>
+      <button id="Stop">Stop</button>
+      <button id="Pause">Pause</button>
       <h1 id="LoadingPercent">Loading</h1>
     </div>
   </body>
