Add : 3D text and Offset Added

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
       <button id="Play">Play</button>
       <button id="Stop">Stop</button>
       <button id="Pause">Pause</button>
-      <h1 id="LoadingPercent">Loading</h1>
+      <!-- <h1 id="LoadingPercent">Loading</h1> -->
     </div>
   </body>
 </html>
