Add : UI Added , VR Support Added ,Audio Play Bug Fix

--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello NCU</title>
   </head>
-  <body>
-    <div class="LoadingClass">
-      <button id="Play">Play</button>
-      <button id="Stop">Stop</button>
-      <button id="Pause">Pause</button>
-      <!-- <h1 id="LoadingPercent">Loading</h1> -->
-    </div>
-  </body>
+  <body></body>
 </html>
