--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello NCU</title>
+    <title>BEATO!</title>
+    <script id="vertexShader" type="x-shader/x-vertex">
+
+      varying vec2 vUv;
+
+      void main() {
+
+      	vUv = uv;
+
+      	gl_Position = vec4( position, 1 );
+
+      }
+    </script>
+
+    <script id="fragmentShader" type="x-shader/x-fragment">
+
+      uniform sampler2D tAudioData;
+      varying vec2 vUv;
+      void main() {
+
+      	vec3 backgroundColor = vec3( 0.125, 0.125, 0.125 );
+      	vec3 color = vec3( 1.0, 1.0, 0.0 );
+        
+
+      	float f = texture2D( tAudioData, vec2( vUv.x, 0 ) ).r;
+
+      	float i = step( vUv.y, f) * step( f - 0.0125, vUv.y );
+
+      	gl_FragColor = vec4( mix( backgroundColor, color, i ), 1.0 );
+
+      }
+    </script>
   </head>
-  <body></body>
+  <body>
+    <div id="container"></div>
+    </div>
+  </body>
 </html>
