Add : Loading Button Added

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BEATO!</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <script id="vertexShader" type="x-shader/x-vertex">
 
       varying vec2 vUv;
@@ -36,8 +38,11 @@
       }
     </script>
   </head>
+  
   <body>
-    <div id="container"></div>
+  <div class="vertical-center">
+      <b id="buttonload">  <i class="fa fa-circle-o-notch fa-spin"></i>Loading</b>
+</div>
     </div>
   </body>
 </html>
