Added : Loading Manager Added

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
   
   <body>
   <div class="vertical-center">
-      <b id="buttonload">  <i class="fa fa-circle-o-notch fa-spin"></i>Loading</b>
+      <b id="buttonload">  <i class="fa fa-circle-o-notch fa-spin"></i><b id='percent'>Hello</b></b>
 </div>
     </div>
   </body>
