--- a/src/index.html
+++ b/src/index.html
@@ -38,11 +38,12 @@
       }
     </script>
   </head>
-  
+ 
   <body>
-  <div class="vertical-center">
-      <b id="buttonload">  <i class="fa fa-circle-o-notch fa-spin"></i><b id='percent'>Hello</b></b>
+     <div class="preloader">
+  <img src="/Texture/Dual Ring-1s-200px.svg" alt="spinner">
 </div>
     </div>
+
   </body>
 </html>
