--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
  
   <body>
      <div class="preloader">
-  <img src="/Texture/Dual Ring-1s-200px.svg" alt="spinner">
+  <img src="/Texture/Double Ring-1s-200px.svg" alt="spinner">
 </div>
     </div>
 
